--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,130 +1,138 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
     android:background="@color/primary_color"
     tools:context=".LoginActivity">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="261dp"
-        android:layout_height="243dp"
-        android:layout_gravity="center"
-        android:contentDescription="icon"
-        app:srcCompat="@drawable/logo" />
-
-    <TextView
-        android:id="@+id/tvPhrase"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/greet"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        android:textSize="40sp"
-        android:textAlignment="center" />
+        android:orientation="vertical"
+        >
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="261dp"
+            android:layout_height="243dp"
+            android:layout_gravity="center"
+            android:contentDescription="icon"
+            app:srcCompat="@drawable/logo" />
 
-    <Space
-        android:layout_width="match_parent"
-        android:layout_height="35dp" />
-
-    <com.google.android.material.textfield.TextInputLayout
-        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginBottom="20dp"
-        android:hint="@string/user"
-        android:textColorHint="@color/white"
-        app:boxBackgroundColor="@color/primary_color"
-
-        app:startIconDrawable="@drawable/user_icon"
-        app:startIconTint="@color/white">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/etUser"
+        <TextView
+            android:id="@+id/tvPhrase"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textEmailAddress" />
+            android:text="@string/greet"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:textSize="40sp"
+            android:textAlignment="center" />
 
-    </com.google.android.material.textfield.TextInputLayout>
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="35dp" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginBottom="20dp"
-        android:hint="@string/password"
-        android:textColorHint="@color/white"
-        app:boxBackgroundColor="@color/primary_color"
-
-        app:startIconDrawable="@drawable/password_icon"
-        app:startIconTint="@color/white">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/etPassword"
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textPassword" />
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginBottom="20dp"
+            android:hint="@string/user"
+            android:textColorHint="@color/white"
+            app:boxBackgroundColor="@color/primary_color"
 
-    </com.google.android.material.textfield.TextInputLayout>
+            app:startIconDrawable="@drawable/user_icon"
+            app:startIconTint="@color/white">
 
-    <TextView
-        android:id="@+id/tvForget"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="¿Olvidaste tu Contraseña?"
-        android:textColor="@color/white"
-        android:gravity="right"
-        android:padding="2dp"
-        android:layout_marginRight="20sp"
-        />
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/etUser"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textEmailAddress"
+                android:textColor="@color/white" />
 
-    <Space
-        android:layout_width="match_parent"
-        android:layout_height="15dp" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-    <Button
-        android:id="@+id/btnLogin"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="10dp"
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginBottom="20dp"
+            android:hint="@string/password"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
+            app:boxBackgroundColor="@color/primary_color"
 
-        android:layout_marginBottom="20dp"
-        android:backgroundTint="#FFF"
+            app:startIconDrawable="@drawable/password_icon"
+            app:startIconTint="@color/white">
 
-        android:text="@string/login"
-        android:textColor="@color/primary_color"
-        android:textStyle="bold"
-        android:textAlignment="center" />
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/etPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:textColor="@color/white"/>
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="¿No Tienes Una cuenta? "
-        android:textColor="@color/white"
-        android:gravity="center"
-        android:padding="2dp"
-        />
+        </com.google.android.material.textfield.TextInputLayout>
 
-    <TextView
-        android:id="@+id/tvSignup"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Registrate Aqui"
-        android:textColor="@color/white"
-        android:gravity="center"
-        android:padding="2dp"
-        android:textStyle="bold"
-        />
+        <TextView
+            android:id="@+id/tvForget"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="¿Olvidaste tu Contraseña?"
+            android:textColor="@color/white"
+            android:gravity="right"
+            android:padding="2dp"
+            android:layout_marginRight="20sp"
+            />
 
-    <Space
-        android:layout_width="match_parent"
-        android:layout_height="113dp" />
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="15dp" />
+
+        <Button
+            android:id="@+id/btnLogin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="10dp"
+
+            android:layout_marginBottom="20dp"
+            android:backgroundTint="#FFF"
+
+            android:text="@string/login"
+            android:textColor="@color/primary_color"
+            android:textStyle="bold"
+            android:textAlignment="center" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="¿No Tienes Una cuenta? "
+            android:textColor="@color/white"
+            android:gravity="center"
+            android:padding="2dp"
+            />
+
+        <TextView
+            android:id="@+id/tvSignup"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Registrate Aqui"
+            android:textColor="@color/white"
+            android:gravity="center"
+            android:padding="2dp"
+            android:textStyle="bold"
+            />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="113dp" />
+    </LinearLayout>
 
 
-</LinearLayout>
+</ScrollView>
