--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -5,10 +5,17 @@
     tools:context="com.udb.dsm.helpets.MainActivity">
 
     <item
-        android:id="@+id/action_return"
-        android:icon="@drawable/return_icon"
+        android:id="@+id/action_add"
+        android:icon="@drawable/add_icon"
         android:orderInCategory="1"
-        android:title="@string/action_return"
+        android:title="@string/action_search"
+        app:showAsAction="always" />
+
+    <item
+        android:id="@+id/action_search"
+        android:icon="@drawable/search_icon"
+        android:orderInCategory="1"
+        android:title="@string/action_search"
         app:showAsAction="always" />
 
     <item
@@ -16,11 +23,11 @@
         android:icon="@drawable/notifications_icon"
         android:orderInCategory="1"
         android:title="@string/action_notifications"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="always" />
 
     <item
-        android:id="@+id/action_edit_user"
-        android:title="@string/action_edit_user"
+        android:id="@+id/action_user"
+        android:title="@string/action_user"
         app:showAsAction="never" />
 
     <item
